--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zendframework/zend-test",
+    "name": "shrwdflrst/zend-test",
     "description": " ",
     "license": "BSD-3-Clause",
     "keywords": [
